<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.android.cardwarsscorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/player_1"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/finn_score"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="bottom|center_horizontal"
                android:textColor="#f3f8f4"
                android:textSize="42sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorBlue"
                android:onClick="loseOneFinn"
                android:padding="16dp"
                android:text="@string/lose_1_life"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorBlue"
                android:onClick="loseThreeFinn"
                android:padding="16dp"
                android:text="@string/lose_3_life"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorGreen"
                android:onClick="addOneFinn"
                android:padding="16dp"
                android:text="@string/restore_1_life"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:text="@string/player_2"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jake_score"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_margin="8dp"
                android:fontFamily="sans-serif-light"
                android:gravity="bottom|center_horizontal"
                android:textColor="#f3f8f4"
                android:textSize="42sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorBlue"
                android:onClick="loseOneJake"
                android:padding="16dp"
                android:text="@string/lose_1_life"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorBlue"
                android:onClick="loseThreeJake"
                android:padding="16dp"
                android:text="@string/lose_3_life"
                android:textSize="18sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/colorGreen"
                android:onClick="addOneJake"
                android:padding="16dp"
                android:text="@string/restore_1_life"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_weight="2"
        android:background="#FDC60A"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textSize="24sp" />

</LinearLayout>
